--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -196,7 +196,9 @@
                         <h3 class="item_title ">
                           <a href="#"><strong>F&b</strong><br>쇼핑몰사이트</a>
                         </h3>
-                        <h5 class="item_category">pc/publishing</h5>
+                        <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">메인페이지/상세페이지</h5>
+                        <h5 class="item_category">publishing</h5>
                       </div>
                     </div>
                   </div>
@@ -210,7 +212,8 @@
                         <h3 class="item_title ">
                           <a href="#"><strong>SIDMOOL</strong><br>천연화장품쇼핑몰<br>리뉴얼사이트</a>
                         </h3>
-                        <h5 class="item_category">pc/design/publishing</h5>
+                        <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">design/publishing</h5>
                       </div>
                     </div>
                   </div>
@@ -224,7 +227,8 @@
                         <h3 class="item_title ">
                           <a href="#"><strong>DODREAM</strong></a>
                         </h3>
-                        <h5 class="item_category">pc/상세페이지제작</h5>
+                        <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">상세페이지</h5>
                       </div>
                     </div>
                   </div>
@@ -239,6 +243,7 @@
                           <a href="#">싱어송라이터<br><strong>motte</strong><br>소개페이지</a>
                         </h3>
                         <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">메인페이지</h5>
                       </div>
                     </div>
                   </div>
@@ -252,7 +257,9 @@
                         <h3 class="item_title ">
                           <a href="#"><strong>GENTLEMONSTER</strong>리뉴얼사이트</a>
                         </h3>
-                        <h5 class="item_category">pc/design/publishing</h5>
+                        <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">서브페이지</h5>
+                        <h5 class="item_category">design/publishing</h5>
                       </div>
                     </div>
                   </div>
