--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/loading.css">
     <link rel="stylesheet" href="css/isotope.css">
+    <link rel="stylesheet" href="css/easypiechart.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/portfolio.css">
-    <link rel="stylesheet" href="css/easypiechart.css">
   </head>
   <body>
 
@@ -34,29 +34,27 @@
           <a href="#"></a>
         </div>
         <div class="title_wrap">
-          <!-- <div> -->
-            <div class="title">
-              <!-- maintext -->
-                <div class="maintext1">
-                  <div class="bar1">H</div>
-                  <div class="bar2">E</div>
-                  <div class="bar3">L</div>
-                  <div class="bar4">L</div>
-                  <div class="bar5">O</div>
-                  <div class="bar6"></div>
-                  <div class="bar7">T</div>
-                  <div class="bar8">H</div>
-                  <div class="bar9">E</div>
-                  <div class="bar10">R</div>
-                  <div class="bar11">E</div>
-                </div>
-                <ul class="maintext2">
-                  <li class="wow fadeInUp animated">PORTFOLIO</li>
-                  <li class="wow fadeInUp animated">/</li>
-                  <li class="wow fadeInUp animated">AREUM JEON</li>
-                </ul>
+          <div class="title">
+            <!-- maintext -->
+              <div class="maintext1">
+                <div class="bar1">H</div>
+                <div class="bar2">E</div>
+                <div class="bar3">L</div>
+                <div class="bar4">L</div>
+                <div class="bar5">O</div>
+                <div class="bar6"></div>
+                <div class="bar7">T</div>
+                <div class="bar8">H</div>
+                <div class="bar9">E</div>
+                <div class="bar10">R</div>
+                <div class="bar11">E</div>
               </div>
-          <!-- </div> -->
+              <ul class="maintext2">
+                <li class="wow fadeInUp animated">PORTFOLIO</li>
+                <li class="wow fadeInUp animated">/</li>
+                <li class="wow fadeInUp animated">AREUM JEON</li>
+              </ul>
+            </div>
         </div>
         <div class="intro">
           <button><i class="fas fa-angle-double-down"></i></button>
@@ -73,9 +71,7 @@
         <div class="nav">
           <button>
             <i class="fa fa-bars" aria-hidden="true"></i>
-            <!-- <span class="skip">버튼</span> -->
           </button>
-          <!-- <nav class="animated fadeInRight"> -->
           <ul>
             <li class="col-xs-12 col-sm-2 col-md-2"><a href="#home">HOME</a></li>
             <li class="col-xs-12 col-sm-2 col-md-2"><a href="#about">ABOUT</a></li>
@@ -200,7 +196,9 @@
                         <h3 class="item_title ">
                           <a href="#"><strong>F&b</strong><br>쇼핑몰사이트</a>
                         </h3>
-                        <h5 class="item_category">pc/publishing</h5>
+                        <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">메인페이지/상세페이지</h5>
+                        <h5 class="item_category">publishing</h5>
                       </div>
                     </div>
                   </div>
@@ -214,7 +212,8 @@
                         <h3 class="item_title ">
                           <a href="#"><strong>SIDMOOL</strong><br>천연화장품쇼핑몰<br>리뉴얼사이트</a>
                         </h3>
-                        <h5 class="item_category">pc/design/publishing</h5>
+                        <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">design/publishing</h5>
                       </div>
                     </div>
                   </div>
@@ -228,7 +227,8 @@
                         <h3 class="item_title ">
                           <a href="#"><strong>DODREAM</strong></a>
                         </h3>
-                        <h5 class="item_category">pc/상세페이지제작</h5>
+                        <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">상세페이지</h5>
                       </div>
                     </div>
                   </div>
@@ -243,6 +243,7 @@
                           <a href="#">싱어송라이터<br><strong>motte</strong><br>소개페이지</a>
                         </h3>
                         <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">메인페이지</h5>
                       </div>
                     </div>
                   </div>
@@ -256,7 +257,9 @@
                         <h3 class="item_title ">
                           <a href="#"><strong>GENTLEMONSTER</strong>리뉴얼사이트</a>
                         </h3>
-                        <h5 class="item_category">pc/design/publishing</h5>
+                        <h5 class="item_category">pc</h5>
+                        <h5 class="item_category">서브페이지</h5>
+                        <h5 class="item_category">design/publishing</h5>
                       </div>
                     </div>
                   </div>
