--- a/portfolio/work_f&b.html
+++ b/portfolio/work_f&b.html
@@ -357,6 +357,11 @@
                     <img class="shots_item_img lazyload" src="images/work_f&b_index_img.png" alt="f&b 인트로 이미지">
                   </a>
                 </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/fb_sub.png" alt="f&b 상세페이지 이미지">
+                  </a>
+                </li>
               </ul>
               <div class="slider">
                 <div class="slider_inner">
