--- a/sidmool/index.html
+++ b/sidmool/index.html
@@ -38,7 +38,7 @@
           <button id="btn-menu" class="icon icon-menu"><span class="skip">토글메뉴</span></button>
           <ul class="gnb-nav">
             <li>
-              <a href="#"><span>MENU</span></a>
+              <a href="#"><span>MENU</span><span class="ko">메뉴</span></a>
               <ul>
                 <li><a href="#">기능별</a></li>
                 <li><a href="#">성분라인별</a></li>
