--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -96,7 +96,7 @@
               <div class="col-xs-12 col-sm-6 col-md-6 aboutext_wrap wow fadeInUp animated">
                 <div class="aboutext">
                   <p>Hello</p>
-                  <p>"웹 퍼블리셔 전아름입니다.
+                  <p>"웹 디자이너, 웹 퍼블리셔 전아름입니다.
                   좋아하는 일을 즐겁게 신나게 잘하고 싶습니다.
                   저는 유저 친화적인 인터페이스를 디자인하여 유저가 원하는 정보에
                   쉽게 접근할 수 있는 웹 페이지를 제작하고 더 나아가
