--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -178,11 +178,11 @@
           <div class="swiper-container container">
             <h2 class="wow fadeInUp animated"><a href="#">MY WORK</a></h2>
             <div class="swiper-wrapper">
-              <div class="swiper-slide work_one" style="cursor:pointer" onclick="window.location.href='https://jar3543.github.io/github/portfolio/work_f&b.html';"></div>
-              <div class="swiper-slide work_two" style="cursor:pointer" onclick="window.location.href='https://jar3543.github.io/github/portfolio/work_sidmool.html';"></div>
-              <div class="swiper-slide work_three" style="cursor:pointer" onclick="window.location.href='https://jar3543.github.io/github/portfolio/work_dodream.html';"></div>
-              <div class="swiper-slide work_four" style="cursor:pointer" onclick="window.location.href='https://jar3543.github.io/github/portfolio/work_motte.html';"></div>
-              <div class="swiper-slide work_five" style="cursor:pointer" onclick="window.location.href='https://jar3543.github.io/github/portfolio/work_gm.html';"></div>
+              <div class="swiper-slide work_one"><a href="https://jar3543.github.io/github/portfolio/work_f&b.html"></a></div>
+              <div class="swiper-slide work_two"><a href="https://jar3543.github.io/github/portfolio/work_sidmool.html"></a></div>
+              <div class="swiper-slide work_three"><a href="https://jar3543.github.io/github/portfolio/work_dodream.html"></a></div>
+              <div class="swiper-slide work_four"><a href="https://jar3543.github.io/github/portfolio/work_motte.html"></a></div>
+              <div class="swiper-slide work_five"><a href="https://jar3543.github.io/github/portfolio/work_gm.html"></a></div>
             </div>
             <!-- Add Arrows -->
             <div class="swiper-button-next"><i class="fas fa-chevron-right"></i></div>
