--- a/megabox/index.html
+++ b/megabox/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>megabox index</title>
+    <title>megabox - sub page</title>
     <!--font icon--><!--css를 링크해야함-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--css-->
@@ -22,11 +22,6 @@
         <li><a href="#boys">상영예정작</a></li>
         <li><a href="#girls">무비포스트</a></li>
       </ul>
-      <div id="sns">
-        <a href="#" class="sns-facebook" title="facebook바로가기">facebook</a>
-        <a href="#" class="sns-twitter" title="twitter바로가기">twitter</a>
-      </div>
-
     </nav>
     <!--내비게이션 end-->
 
