--- a/megabox/index.html
+++ b/megabox/index.html
@@ -6,7 +6,7 @@
     <!--font icon--><!--css를 링크해야함-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--css-->
-    <link rel="stylesheet" href="css/megabox.css">
+    <link rel="stylesheet" href="css/sub.css">
     <!--js-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </script>
