--- a/portfolio/work_sidmool.html
+++ b/portfolio/work_sidmool.html
@@ -381,9 +381,9 @@
     <footer>
       <div class="container">
        <ul class="sns">
-         <li><a href="#"><img src="images/naverblog.png" alt="sns 네이버블로그 링크 이미지"></a></li>
-         <li><a href="#"><img src="images/github.png" alt="sns 깃헙 링크 이미지"></a></li>
-         <li><a href="#"><img src="images/codepen.png" alt="sns 코드펜 링크 이미지"></a></li>
+         <li><a href="https://github.com/jar3543/github"><img src="images/naverblog.png" alt="sns 네이버블로그 링크 이미지"></a></li>
+         <li><a href="https://github.com/jar3543/github"><img src="images/github.png" alt="sns 깃헙 링크 이미지"></a></li>
+         <li><a href="https://codepen.io/jeonareum/"><img src="images/codepen.png" alt="sns 코드펜 링크 이미지"></a></li>
        </ul>
        <p class="skip">Icon made by Freepik from www.flaticon.com
         is licensed by CC 3.0 BY</p>
