--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -183,7 +183,7 @@
               <div class="swiper-slide work_three"><a href="https://jar3543.github.io/github/portfolio/work_dodream.html"></a></div>
               <div class="swiper-slide work_four"><a href="https://jar3543.github.io/github/portfolio/work_motte.html"></a></div>
               <div class="swiper-slide work_five"><a href="https://jar3543.github.io/github/portfolio/work_gm.html"></a></div>
-              <div class="swiper-slide work_five"><a href="https://jar3543.github.io/github/portfolio/work_mg.html"></a></div>
+              <div class="swiper-slide work_six"><a href="https://jar3543.github.io/github/portfolio/work_mg.html"></a></div>
             </div>
             <!-- Add Arrows -->
             <div class="swiper-button-next"><i class="fas fa-chevron-right"></i></div>
