--- a/portfolio/work_mg.html
+++ b/portfolio/work_mg.html
@@ -243,6 +243,7 @@
       .details{height: 920px; margin-top: 100px;}
       .details .container{height: auto;}
       .details .details_info{margin-top: 150px;}
+      .details .details_btn a.underlined{margin-right: 5px;}
       .article_detail .detail_main .shots{padding: 2em 1.8em;}
       .article_detail .detail_main .shots .shots_item{margin: 21% auto 0;margin-top: 127px;}
       .article_detail .detail_main .slider{padding: 2em 4em;}
