--- a/portfolio/work_mg.html
+++ b/portfolio/work_mg.html
@@ -232,7 +232,7 @@
     /* 모바일================================================================== */
     @media (max-width:767px) {
 
-      .top_box{height: 780px;background:#d1d1da;}
+      .top_box{height: 780px;background-image: linear-gradient(to right, #1e2931, #394e5a);}
       .top_box .container{padding: 6em 3.5em 0 3.5em;}
       .top_box .main_title1{left: 58px;color: #fff;}
       .top_box .main_title2{font-size: 24px;margin-top: 10px;}
@@ -260,7 +260,7 @@
     /* 태블릿================================================================== */
     @media (min-width:768px) and (max-width:1023px) {
 
-      .top_box{height: 1400px;background-position: 50% 0%;}
+      .top_box{height: 1400px;background-image: linear-gradient(to right, #1e2931, #394e5a);}
       .top_box .container{
         padding-left: 7em;
         padding-right: 7em;}
