--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -181,7 +181,6 @@
               <div class="swiper-slide work_one"><a href="https://jar3543.github.io/github/portfolio/work_f&b.html"></a></div>
               <div class="swiper-slide work_two"><a href="https://jar3543.github.io/github/portfolio/work_sidmool.html"></a></div>
               <div class="swiper-slide work_three"><a href="https://jar3543.github.io/github/portfolio/work_dodream.html"></a></div>
-              <div class="swiper-slide work_four"><a href="https://jar3543.github.io/github/portfolio/work_motte.html"></a></div>
               <div class="swiper-slide work_five"><a href="https://jar3543.github.io/github/portfolio/work_gm.html"></a></div>
               <div class="swiper-slide work_six"><a href="https://jar3543.github.io/github/portfolio/work_mg.html"></a></div>
             </div>
@@ -197,7 +196,7 @@
             <p>"Taking a look  at  my portfolio  is  appreciated.</p>
             <P>Have any suggestion or interested in working together?"</P>
             <ul>
-              <li><i class="far fa-envelope"></i>jar3543@gmail.com</li>
+              <li><i class="far fa-envelope"></i>areumjeonS2@gmail.com</li>
               <li><i class="fas fa-phone"></i>010 6591 0763</li>
             </ul>
           </div>
