--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,9 +50,9 @@
                 <div class="bar11">E</div>
               </div>
               <ul class="maintext2">
-                <li class="wow fadeInUp animated">PORTFOLIO</li>
-                <li class="wow fadeInUp animated">/</li>
-                <li class="wow fadeInUp animated">AREUM JEON</li>
+                <li>PORTFOLIO</li>
+                <li>/</li>
+                <li>AREUM JEON</li>
               </ul>
             </div>
         </div>
@@ -215,7 +215,7 @@
       <footer>
         <div class="container">
          <ul class="sns">
-           <li><a href="https://github.com/jar3543/github"><img src="images/naverblog.png" alt="네이버블로그 링크 이미지"></a></li>
+           <li><a href="#"><img src="images/naverblog.png" alt="네이버블로그 링크 이미지"></a></li>
            <li><a href="https://github.com/jar3543/github"><img src="images/github.png" alt="sns 깃헙 링크 이미지"></a></li>
            <li><a href="https://codepen.io/jeonareum/"><img src="images/codepen.png" alt="sns 코드펜 링크 이미지"></a></li>
          </ul>
