--- a/portfolio/work_dodream.html
+++ b/portfolio/work_dodream.html
@@ -417,7 +417,7 @@
     <footer>
       <div class="container">
        <ul class="sns">
-         <li><a href="https://github.com/jar3543/github"><img src="images/naverblog.png" alt="네이버블로그 링크 이미지"></a></li>
+         <li><a href="#"><img src="images/naverblog.png" alt="네이버블로그 링크 이미지"></a></li>
          <li><a href="https://github.com/jar3543/github"><img src="images/github.png" alt="깃헙 링크 이미지"></a></li>
          <li><a href="https://codepen.io/jeonareum/"><img src="images/codepen.png" alt="코드펜 링크 이미지"></a></li>
        </ul>
