--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Areum Jeon | Portfolio !!!!!!</title>
+    <title>Areum Jeon | Portfolio test</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Quicksand|Roboto|Nanum+Gothic+Coding|Nanum+Myeongjo|Gothic+A1|Open+Sans+Condensed:300|Indie+Flower" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
