--- a/portfolio/index2.html
+++ b/portfolio/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Areum Jeon | Portfolio 복사본</title>
+  <title>전아름 | 포트폴리오</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Quicksand|Roboto|Nanum+Gothic+Coding|Nanum+Myeongjo|Gothic+A1|Open+Sans+Condensed:300|Indie+Flower" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -96,7 +96,7 @@
           <div class="about-right">
               <div class="about-introduce">
                 <ul>
-                  <li><b>웹퍼블리셔 전아름 입니다</b><br>
+                  <li><b>안녕하세요. 전아름 입니다</b><br>
                           웹 상에 원하는 화면을 구현하는 것에 큰 인상이 남아 웹퍼블리셔로서의 활동을 이어나가고 있습니다.
                           저는 유저 친화적인 인터페이스를 디자인하여 유저가 원하는 정보에 쉽게 접근할 수 있는 웹 페이지를 제작하고
                           더 나아가 실무에 적합한 기능을 함께 구현하는 것을 목표로 하고있습니다.</li>
@@ -216,7 +216,7 @@
               <i class="far fa-envelope"></i>areumjeonS2@gmail.com
             </li> -->
             <li><a href="mailto:jar3543@gmail.com" class="contact_form">areumjeonS2@gmail.com</a></li>
-            <li><a href="#" class="txtbk">이력서<i class="fas fa-arrow-right"></i></a></li>
+            <!-- <li><a href="#" class="txtbk">이력서<i class="fas fa-arrow-right"></i></a></li> -->
           </ul>
       </div>
       </article>
